Added Components to Swagger PHP & Sample values
