# storage/api-docs/api-docs.json
@@ -2,7 +2,7 @@
     "openapi": "3.0.0",
     "info": {
         "title": "Youtube Video API",
-        "description": "Kittitat's Youtube Video API",
+        "description": "This is a Youtube Video API that allow users to retrieve generated data about youtube video(s)\n *      as a JSON format.",
         "contact": {
             "email": "n00201327@iadt.ie"
         },
@@ -24,6 +24,38 @@
                 "responses": {
                     "200": {
                         "description": "Successful operation, Returns a list of Books in JSON format"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/api/channels/{id}/videos": {
+            "get": {
+                "tags": [
+                    "Channels"
+                ],
+                "summary": "Display the specified resource.",
+                "description": "Gets videos by its channel ID",
+                "operationId": "c12cf4dc0da93cf936e12ea1b43bccdd",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Video id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
                     },
                     "401": {
                         "description": "Unauthenticated"
@@ -73,15 +105,25 @@
                 ],
                 "summary": "Display a listing of the resource.",
                 "description": "Displays all the youtube videos with its relationship such as:\n *       the channel that created it.\n *       ",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/youtube_video"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "200": {
-                        "description": "Successful operation, Returns a list of Books in JSON format"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
+                        "description": "Successful operation, Returns a list of Videos in JSON format",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/youtube_video"
+                                }
+                            }
+                        }
                     }
                 }
             },
@@ -148,16 +190,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "properties": {
-                                        "status": {
-                                            "type": "integer",
-                                            "example": ""
-                                        },
-                                        "data": {
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
+                                    "$ref": "#/components/schemas/youtube_video"
                                 }
                             }
                         }
@@ -321,12 +354,170 @@
                     }
                 }
             }
+        },
+        "/api/youtubeVideos/{id}/comments": {
+            "get": {
+                "tags": [
+                    "Youtube Videos"
+                ],
+                "summary": "Display the specified resource.",
+                "description": "Gets comments by its video ID",
+                "operationId": "096a9f120a1259a3a23b85893bf3783f",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Video ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
         }
     },
     "components": {
+        "schemas": {
+            "youtube_video": {
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "title": {
+                        "type": "string",
+                        "example": "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+                    },
+                    "description": {
+                        "type": "text",
+                        "example": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sed erat mi. Vivamus mollis orci vitae neque fringilla, non interdum urna commodo. Cras at blandit lorem, malesuada posuere felis."
+                    },
+                    "created_at": {
+                        "type": "string",
+                        "format": "date",
+                        "example": "2022-10-29"
+                    },
+                    "duration": {
+                        "type": "integer",
+                        "example": "30"
+                    },
+                    "likes": {
+                        "type": "integer",
+                        "example": "30"
+                    },
+                    "dislikes": {
+                        "type": "integer",
+                        "example": "30"
+                    },
+                    "views": {
+                        "type": "integer",
+                        "example": "30"
+                    },
+                    "link": {
+                        "type": "text",
+                        "example": "youtube.com\\/watch?v=1fa3d3b7-d0c7-3e5e-89e7-3713d0e74f87"
+                    },
+                    "thumbnail": {
+                        "type": "text",
+                        "example": "https:\\/\\/via.placeholder.com\\/640x480.png\\/005500?text=thumbnail+voluptatem"
+                    },
+                    "channel": {
+                        "$ref": "#/components/schemas/Channel"
+                    },
+                    "comments": {
+                        "$ref": "#/components/schemas/Comment"
+                    }
+                },
+                "type": "object"
+            },
+            "Channel": {
+                "properties": {
+                    "id": {
+                        "description": "channel id",
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "name": {
+                        "description": "name of the channel",
+                        "type": "string",
+                        "example": "James"
+                    },
+                    "subscribers": {
+                        "description": "number of subscribers",
+                        "type": "integer",
+                        "example": "1100"
+                    },
+                    "created_at": {
+                        "description": "the date when the channel has been created",
+                        "type": "string",
+                        "format": "date",
+                        "example": "2019-10-06"
+                    },
+                    "hasVideo": {
+                        "description": "the amount of video",
+                        "type": "integer",
+                        "format": "integer",
+                        "example": "100"
+                    }
+                },
+                "type": "object"
+            },
+            "Comment": {
+                "properties": {
+                    "id": {
+                        "description": "comment id",
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "text": {
+                        "description": "comment texts",
+                        "type": "text",
+                        "example": "lorem ipsum"
+                    },
+                    "likes": {
+                        "description": "number of likes",
+                        "type": "integer",
+                        "example": "1100"
+                    },
+                    "dislikes": {
+                        "description": "number of dislikes",
+                        "type": "integer",
+                        "example": "90"
+                    },
+                    "commented_at": {
+                        "description": "The date of the comment",
+                        "type": "string",
+                        "format": "string",
+                        "example": "6 years ago"
+                    },
+                    "channel": {
+                        "$ref": "#/components/schemas/Channel"
+                    }
+                },
+                "type": "object"
+            }
+        },
         "responses": {
             "default": {
                 "description": "Welcome page"
+            },
+            "401": {
+                "description": "Unauthenticated"
+            },
+            "403": {
+                "description": "Forbidden"
             }
         }
     }
